minor bug changes
change chromium scrollbar
remove noise frequency parameter
set volume max to 0db for modules
style fixes

--- a/styles/components/app.styl
+++ b/styles/components/app.styl
@@ -128,8 +128,11 @@
 
   height 100%
 
-  overflow-y scroll
+  overflow-y auto
   overflow-x clip
+
+  scrollbar-width thin
+  scrollbar-color var(--surface-active) var(--on-surface-active)
 
 #sequencerContainer
   display flex
