--- a/styles/components/arpeggiator.styl
+++ b/styles/components/arpeggiator.styl
@@ -45,6 +45,7 @@ hr
     height 100%
 
     transition background .2s ease-in-out
+    width 5px
 
   .indicator.active
     background var(--primary-color)
