--- a/styles/components/edit-patch.styl
+++ b/styles/components/edit-patch.styl
@@ -94,6 +94,7 @@
 
   select, ui-knob
     margin 0px 5px
+    width 100%
 
 .selectContainer
   display flex
