--- a/styles/components/knob.styl
+++ b/styles/components/knob.styl
@@ -37,6 +37,9 @@ svg
   margin 10px 0px
   width 100%
 
+  user-drag none
+  user-select none
+
   &:hover
     cursor ns-resize
 
